k8s/calico-resources/40_default-deny-client.yaml
# Block all connections in client
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: client
  name: default-deny
spec:
  podSelector:
    matchLabels: {}
