k8s/calico-resources/40_default-deny-stars.yaml
# Block all connections in stars
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: stars
  name: default-deny
spec:
  podSelector:
    matchLabels: {}
